green-deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-deployment
spec:
  replicas: 2 # You can adjust the number of replicas as needed
  selector:
    matchLabels:
      app: argocd
  template:
    metadata:
      labels:
        app: argocd
    spec:
      containers:
        - name: argocd-container
          image: 010526243714.dkr.ecr.eu-west-2.amazonaws.com/learn:49
          ports:
            - containerPort: 80 # Replace with the port your application listens on
