green-deployment/deploymrnt.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-deployment
spec:
  replicas: 3 # You can adjust the number of replicas as needed
  selector:
    matchLabels:
      app: argocd
  template:
    metadata:
      labels:
        app: argocd
    spec:
      containers:
        - name: argocd-container
          image: noorulqumar80/cicdargocd:76
          ports:
            - containerPort: 80 # Replace with the port your application listens on
