green-deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: default
spec:
  selector:
    app: argocd
  ports:
    - protocol: TCP
      port: 80 # Expose port 80 on the service
      targetPort: 80 # Forward traffic to the container's port
  type: ClusterIP # Use LoadBalancer for cloud providers that support it
