green-deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx 
spec:
  ingressClassName: nginx
  rules:
  - host: portal.noorulqumar.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: website-service
            port:
              number: 80
